crates/markdown-neuraxis-syntax/src/snapshots/inlines/code_span_double_backtick.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..35
  PARAGRAPH@0..35
    TEXT@0..3 "Use"
    WHITESPACE@3..4 " "
    CODE_SPAN@4..28
      BACKTICK@4..5 "`"
      BACKTICK@5..6 "`"
      TEXT@6..10 "code"
      WHITESPACE@10..11 " "
      TEXT@11..15 "with"
      WHITESPACE@15..16 " "
      BACKTICK@16..17 "`"
      WHITESPACE@17..18 " "
      TEXT@18..26 "backtick"
      BACKTICK@26..27 "`"
      BACKTICK@27..28 "`"
    WHITESPACE@28..29 " "
    TEXT@29..33 "here"
    DOT@33..34 "."
    NEWLINE@34..35 "\\n"
