crates/markdown-neuraxis-syntax/src/snapshots/inlines/hard_break.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..58
  PARAGRAPH@0..58
    TEXT@0..4 "Line"
    WHITESPACE@4..5 " "
    TEXT@5..8 "one"
    WHITESPACE@8..9 " "
    TEXT@9..13 "with"
    WHITESPACE@13..14 " "
    TEXT@14..22 "trailing"
    WHITESPACE@22..23 " "
    TEXT@23..29 "spaces"
    WHITESPACE@29..31 "  "
    NEWLINE@31..32 "\\n"
    TEXT@32..36 "Line"
    WHITESPACE@36..37 " "
    TEXT@37..40 "two"
    WHITESPACE@40..41 " "
    TEXT@41..46 "after"
    WHITESPACE@46..47 " "
    TEXT@47..51 "hard"
    WHITESPACE@51..52 " "
    TEXT@52..57 "break"
    NEWLINE@57..58 "\\n"
