crates/markdown-neuraxis-syntax/src/snapshots/inlines/image.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..23
  PARAGRAPH@0..23
    IMAGE@0..22
      EXCLAIM@0..1 "!"
      LBRACKET@1..2 "["
      TEXT@2..5 "alt"
      WHITESPACE@5..6 " "
      TEXT@6..10 "text"
      RBRACKET@10..11 "]"
      LPAREN@11..12 "("
      TEXT@12..17 "image"
      DOT@17..18 "."
      TEXT@18..21 "png"
      RPAREN@21..22 ")"
    NEWLINE@22..23 "\\n"
