crates/markdown-neuraxis-syntax/src/snapshots/inlines/link.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..33
  PARAGRAPH@0..33
    LINK@0..32
      LBRACKET@0..1 "["
      TEXT@1..5 "link"
      WHITESPACE@5..6 " "
      TEXT@6..10 "text"
      RBRACKET@10..11 "]"
      LPAREN@11..12 "("
      TEXT@12..17 "https"
      COLON@17..18 ":"
      TEXT@18..27 "//example"
      DOT@27..28 "."
      TEXT@28..31 "com"
      RPAREN@31..32 ")"
    NEWLINE@32..33 "\\n"
