crates/markdown-neuraxis-syntax/src/snapshots/inlines/strikethrough.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..23
  PARAGRAPH@0..23
    STRIKETHROUGH@0..22
      TILDE@0..1 "~"
      TILDE@1..2 "~"
      TEXT@2..15 "strikethrough"
      WHITESPACE@15..16 " "
      TEXT@16..20 "text"
      TILDE@20..21 "~"
      TILDE@21..22 "~"
    NEWLINE@22..23 "\\n"
